# cuickcook

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: main.rs  openai.rs  youtube.rs
frontend/: Cargo.toml  index.html  rustfmt.toml  style.css
frontend/src/: api.rs  main.rs
src/: main.rs  openai.rs
