[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
gloo-timers = { version = "0.3.0", features = ["futures"] }
leptos = { version = "0.6.11", features = ["csr", "nightly"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde = "1.0.199"
serde_json = "1.0.116"
url = "2.5.0"
